<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nhind</groupId>
	<artifactId>config-store</artifactId>
	<version>9.0.0</version>
	<packaging>jar</packaging>
	<name>NHIN Direct Java RI - Configuration Persistence Layer</name>
    <description>NHIN Direct Security And Trust Agent</description>
    <url>http://api.nhindirect.org/x/www/api.nhindirect.org/java/site/config/config-store/${project.version}</url>     
	<scm>
		<url>scm:git:https://github.com/DirectProjectJavaRI/config-store.git</url>
		<connection>scm:git:https://github.com/DirectProjectJavaRI/config-store.git</connection>
	</scm>
    <prerequisites>
        <maven>3.5.0</maven>
    </prerequisites>  	
    <parent>
	   <groupId>org.springframework.boot</groupId>
	   <artifactId>spring-boot-dependencies</artifactId>
	   <version>4.1.0</version>
	   <relativePath />
    </parent>	    	
    <developers>
        <developer>
            <name>Pat Pyette</name>
            <email>ppyette@inpriva.com</email>
            <roles>
                <role>owner</role>
            </roles>
        </developer> 
        <developer>
            <name>Greg Meyer</name>
            <id>GM2552</id>
            <email>gm2552@cerner.com</email>    
            <roles>
                <role>owner</role>
            </roles>                                                
        </developer>  
        <developer>
            <name>Beau Grantham</name>
            <email>bgrantha@harris.com</email>                                        
        </developer>         
    </developers>

    <licenses>
       <license>
          <name>New BSD License</name>
          <url>http://nhindirect.org/BSDLicense</url>
       </license>
    </licenses> 
    <properties>
      <joda-time.version>2.14.0</joda-time.version>
    </properties>      
	<dependencies>
	    <dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter</artifactId>
	    </dependency>	    
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-r2dbc</artifactId>
		</dependency>	
		<dependency>
		    <groupId>io.projectreactor</groupId>
		    <artifactId>reactor-test</artifactId>
		    <scope>test</scope>
		</dependency>		    	     		    
		<dependency>
			<groupId>org.nhind</groupId>
			<artifactId>direct-policy</artifactId>
			<version>9.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.nhind</groupId>
			<artifactId>config-model</artifactId>
			<version>9.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.nhind</groupId>
			<artifactId>direct-common</artifactId>
			<version>9.0.0</version>
		</dependency>							  			
		<dependency>
		    <groupId>joda-time</groupId>
		    <artifactId>joda-time</artifactId>
		    <version>${joda-time.version}</version> 
		</dependency>	
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>					
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>	
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-test</artifactId>
		    <scope>test</scope>
		</dependency>	 
	    <dependency>
	       <groupId>io.r2dbc</groupId>
	       <artifactId>r2dbc-h2</artifactId>
	       <scope>test</scope>
	    </dependency>		        				        					
	</dependencies>
	<build>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
			</extension>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh-external</artifactId>
			</extension>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
			</extension>
		</extensions>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<targetPath>lib</targetPath>
				<directory>${project.basedir}/lib</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
			<testResource>
				<targetPath>lib</targetPath>
				<directory>${project.basedir}/lib</directory>
			</testResource>
		</testResources>
		<plugins>
		      <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-source-plugin</artifactId>
		        <executions>
		          <execution>
		            <goals>
		              <goal>jar</goal>
		            </goals>
		          </execution>
		        </executions>
		      </plugin>  			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<phase>compile</phase>
					</execution>
				</executions>
				<configuration>
					<fork>true</fork>
					<optimize>true</optimize>
					<showDeprecation>true</showDeprecation>
					<encoding>UTF-8</encoding>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
	        <plugin>
	          <groupId>org.apache.maven.plugins</groupId>
	          <artifactId>maven-jar-plugin</artifactId>
	            <configuration>
	               <archive>
	                  <index>true</index>
	               </archive>
	            </configuration>       
	            <executions>
	              <execution>
	                <goals>
	                  <goal>test-jar</goal>
	                </goals>
	              </execution>
	            </executions>
	         </plugin> 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
				    <additionalJOption>-Xdoclint:none</additionalJOption>
				    <failOnError>false</failOnError>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<docfilessubdirs>true</docfilessubdirs>
					<source>17</source>
					<show>public</show>
					<failOnError>false</failOnError>
				</configuration>
	            <executions>
	              <execution>
	                <phase>package</phase>
	                <id>attach-javadocs</id>
	                <goals>
	                  <goal>jar</goal>
	                </goals>
	              </execution>
	            </executions>					
			</plugin>
			<!--  for releases only
	        <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-gpg-plugin</artifactId>
               <executions>
                 <execution>
                    <id>sign-artifacts</id>
                    <phase>package</phase>
                    <goals>
                       <goal>sign</goal>
                    </goals>
                 </execution>
               </executions>
               <version>3.0.1</version>
            </plugin>
            -->
	        <plugin>
	          <groupId>org.sonatype.central</groupId>
	          <artifactId>central-publishing-maven-plugin</artifactId>
	          <version>0.8.0</version>
	          <extensions>true</extensions>
	          <configuration>
	            <publishingServerId>central</publishingServerId>
	          </configuration>
	        </plugin>            
		</plugins>	
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
				    <additionalJOption>-Xdoclint:none</additionalJOption>
				    <failOnError>false</failOnError>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<docfilessubdirs>true</docfilessubdirs>
					<source>17</source>
					<show>public</show>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<configuration>
					<targetJdk>17</targetJdk>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<configuration>
					<effort>Max</effort>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<configuration>
					<tags>
						<tag>FIXME</tag>
						<tag>TODO</tag>
						<tag>WARN</tag>
						<tag>@deprecated</tag>
					</tags>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
